tests/constant-captured-variables.stderr
error: constant cannot capture outside variables
  ┌─ test:5:13
  │
5 │   f : () -> n
  │             ^ captured variable
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/constant-captured-variables

