tests/constant-captured-variables.wpl
f : {
  n : 42

  f :: () -> Number
  f : () -> n

  f
}

show (f ())
